--- a/src/com/eqsys/view/ClientDetailLayout.fxml
+++ b/src/com/eqsys/view/ClientDetailLayout.fxml
@@ -125,13 +125,16 @@
                            </children>
                         </VBox>
                         <Button fx:id="wavefQuery" mnemonicParsing="false" onAction="#handleWavefQuery" text="查询" />
-                        <Button mnemonicParsing="false" onAction="#handleTest" text="Test" />
+                        <Button mnemonicParsing="false" onAction="#handleTest" text="Test" visible="false" />
                      </children>
                   </HBox>
-                  <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                  <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" GridPane.rowSpan="3">
                      <children>
-                        <Label layoutX="30.0" layoutY="24.0" text="类型:" />
-                        <ComboBox layoutX="25.0" layoutY="51.0" prefWidth="150.0" promptText="波形类型" />
+                        <DatePicker fx:id="starttimeDp" layoutX="44.0" layoutY="35.0" />
+                        <DatePicker fx:id="endtimeDp" layoutX="44.0" layoutY="86.0" />
+                        <Label layoutX="44.0" layoutY="14.0" text="开始时间：" />
+                        <Label layoutX="44.0" layoutY="67.0" text="结束时间：" />
+                        <Button layoutX="54.0" layoutY="139.0" mnemonicParsing="false" onAction="#handleWavefQuery2" text="查询" />
                      </children>
                   </AnchorPane>
                </children>
