--- a/src/com/eqsys/view/MainPaneLayout.fxml
+++ b/src/com/eqsys/view/MainPaneLayout.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
@@ -18,7 +24,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane prefHeight="600.0" stylesheets="@mainpanetheme.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.eqsys.view.MainPaneController">
+<GridPane prefHeight="600.0" stylesheets="@mainpanetheme.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.eqsys.view.MainPaneController">
   <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -160,27 +166,25 @@
                   <Cursor fx:constant="DEFAULT" />
                </cursor>
                <menus>
-                  <Menu mnemonicParsing="false" text="日志管理" />
+                  <Menu mnemonicParsing="false" text="帮助">
+                     <items>
+                        <MenuItem mnemonicParsing="false" text="关于" />
+                     </items></Menu>
                   <Menu mnemonicParsing="false" text="数据库管理">
                      <items>
                         <MenuItem mnemonicParsing="false" onAction="#handleConnectDb" text="连接数据库" />
                         <MenuItem mnemonicParsing="false" onAction="#handleDbSetting" text="数据库设置" />
                      </items>
                   </Menu>
-                  <Menu mnemonicParsing="false" text="数据分析">
+                  <Menu mnemonicParsing="false" text="数据管理">
                      <items>
-                        <MenuItem mnemonicParsing="false" text="Delete" />
-                     </items>
-                  </Menu>
-                  <Menu mnemonicParsing="false" text="运行管理">
-                     <items>
-                        <MenuItem mnemonicParsing="false" text="About" />
+                        <MenuItem mnemonicParsing="false" onAction="#handleDataAnalysis" text="数据分析" />
                      </items>
                   </Menu>
                   <Menu mnemonicParsing="false" text="系统管理">
                      <items>
-                        <MenuItem mnemonicParsing="false" onAction="#handleNodeMgr" text="节点管理" />
-                        <MenuItem mnemonicParsing="false" text="退出" />
+                        <MenuItem mnemonicParsing="false" onAction="#handleNodeMgr" text="台站管理" />
+                        <MenuItem mnemonicParsing="false" text="    退出" />
                      </items>
                   </Menu>
                </menus>
