--- a/src/com/eqsys/view/LoginLayout.fxml
+++ b/src/com/eqsys/view/LoginLayout.fxml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<GridPane id="login-background" alignment="CENTER" prefHeight="250.0" prefWidth="400.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.eqsys.view.LoginLayoutController">
+<GridPane id="login-background" alignment="CENTER" prefHeight="250.0" prefWidth="400.0" stylesheets="@mainpanetheme.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.eqsys.view.LoginLayoutController">
    <children>
       <ImageView fitHeight="52.0" fitWidth="114.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="RIGHT">
          <image>
             <Image url="@images/img_icon.png" />
          </image>
       </ImageView>
-      <Label text="管理员登录" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+      <Label styleClass="label-header" text="管理员登录" GridPane.columnIndex="1" GridPane.halignment="CENTER">
          <font>
             <Font size="26.0" />
          </font>
