--- a/src/com/eqsys/view/MainPaneLayout.fxml
+++ b/src/com/eqsys/view/MainPaneLayout.fxml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
@@ -24,7 +18,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane prefHeight="600.0" stylesheets="@mainpanetheme.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.eqsys.view.MainPaneController">
+<GridPane prefHeight="600.0" stylesheets="@mainpanetheme.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.eqsys.view.MainPaneController">
   <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -93,68 +87,56 @@
         <tabs>
           <Tab closable="false" text="    主页    ">
                <content>
-                  <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                  <GridPane prefHeight="283.0" prefWidth="600.0">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints maxHeight="20.0" minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="247.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
                      <children>
-                        <GridPane AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="30.0">
+                        <AnchorPane id="main_background1_2" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                            <children>
-                              <Label text="数据库信息" GridPane.columnSpan="2" GridPane.halignment="LEFT">
+                              <Label layoutX="32.0" layoutY="42.0" text="台网名称：" />
+                              <Label layoutX="32.0" layoutY="67.0" text="IP：" />
+                              <Label fx:id="serverId" layoutX="119.0" layoutY="42.0" text="Label" />
+                              <Label fx:id="serverIp" layoutX="119.0" layoutY="67.0" text="Label" />
+                              <Label layoutX="32.0" layoutY="89.0" text="在线台站数量：" />
+                              <Label fx:id="onLineLabel" layoutX="119.0" layoutY="89.0" text="Label" />
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane id="main_background2_2" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <children>
+                              <Label fx:id="dbName" layoutX="135.0" layoutY="42.0" text="Label" />
+                              <Label fx:id="dbType" layoutX="135.0" layoutY="65.0" text="Label" />
+                              <Label fx:id="dbState" layoutX="135.0" layoutY="93.0" text="Label" />
+                              <Label layoutX="56.0" layoutY="42.0" text="服务器名称：" />
+                              <Label layoutX="56.0" layoutY="65.0" text="数据库类型：" />
+                              <Label layoutX="56.0" layoutY="93.0" text="连接状态：" />
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane id="main_background1" prefHeight="200.0" prefWidth="200.0">
+                           <children>
+                              <Label layoutX="57.0" layoutY="6.0" styleClass="label-header" text="台网服务器信息">
                                  <font>
                                     <Font size="20.0" />
                                  </font>
                               </Label>
-                              <Label text="服务器名称：" GridPane.halignment="LEFT" GridPane.rowIndex="1" />
-                              <Label text="数据库类型：" GridPane.halignment="LEFT" GridPane.rowIndex="2" />
-                              <Label fx:id="dbName" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <Label fx:id="dbType" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                              <Label text="连接状态：" GridPane.halignment="LEFT" GridPane.rowIndex="3" />
-                              <Label fx:id="dbState" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                            </children>
-                           <columnConstraints>
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="125.0" minWidth="10.0" prefWidth="118.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="129.0" minWidth="10.0" prefWidth="82.0" />
-                           </columnConstraints>
-                           <rowConstraints>
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="36.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="33.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                           </rowConstraints>
-                        </GridPane>
-                        <GridPane layoutX="394.0" layoutY="-5.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0">
+                        </AnchorPane>
+                        <AnchorPane id="main_background2" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
                            <children>
-                              <Label text="台网服务器信息" GridPane.columnSpan="2" GridPane.halignment="LEFT">
+                              <Label layoutX="83.0" layoutY="6.0" styleClass="label-header" text="数据库信息">
                                  <font>
                                     <Font size="20.0" />
                                  </font>
                               </Label>
-                              <Label text="台网名称：" GridPane.halignment="LEFT" GridPane.rowIndex="1" />
-                              <Label text="IP：" GridPane.halignment="LEFT" GridPane.rowIndex="2" />
-                              <Label fx:id="serverId" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <Label fx:id="serverIp" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                              <Label text="在线台站数量:" GridPane.rowIndex="3" />
-                              <Label fx:id="onLineLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                            </children>
-                           <columnConstraints>
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="107.0" minWidth="10.0" prefWidth="107.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="141.0" minWidth="10.0" prefWidth="93.0" />
-                           </columnConstraints>
-                           <rowConstraints>
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="36.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                           </rowConstraints>
-                        </GridPane>
+                        </AnchorPane>
                      </children>
-                  </AnchorPane>
+                  </GridPane>
                </content>
             </Tab>
         </tabs>
@@ -193,7 +175,7 @@
                </opaqueInsets>
             </MenuBar>
          </children></AnchorPane>
-      <HBox id="shortkeybg" alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="1098.0" GridPane.columnSpan="9" GridPane.rowIndex="1">
+      <HBox alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="1098.0" styleClass="shortkeybg" GridPane.columnSpan="9" GridPane.rowIndex="1">
          <children>
             <Button id="shortkey1" fx:id="connDbBtn" mnemonicParsing="false" onAction="#handleConnectDb" prefHeight="40.0" prefWidth="40.0">
                <HBox.margin>
@@ -203,7 +185,7 @@
             <Button id="shortkey3" fx:id="analysisyBtn" mnemonicParsing="false" onAction="#handleDataAnalysis" prefHeight="40.0" prefWidth="40.0" />
          </children>
          <GridPane.margin>
-            <Insets />
+            <Insets top="2.0" />
          </GridPane.margin>
       </HBox>
       <TabPane prefHeight="200.0" prefWidth="200.0" styleClass="datatab" tabClosingPolicy="UNAVAILABLE" GridPane.columnSpan="3" GridPane.rowIndex="2" GridPane.rowSpan="6">
@@ -245,7 +227,7 @@
             </Tab>
         </tabs>
       </TabPane>
-      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="9" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" styleClass="shortkeybg" GridPane.columnIndex="9" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
          <children>
             <Label text="UTC 时间:" />
             <Label fx:id="utcTimeLabel" text="Label" textFill="#07b21b">
