编辑台站信息界面优化

--- a/src/com/eqsys/view/LoginLayout.fxml
+++ b/src/com/eqsys/view/LoginLayout.fxml
@@ -28,10 +28,10 @@
       <Label text="密码   " GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
       <TextField fx:id="accountTf" promptText="输入账号" GridPane.columnIndex="1" GridPane.rowIndex="1" />
       <PasswordField fx:id="passwordPf" promptText="输入密码" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="3" GridPane.rowIndex="4">
          <children>
-            <Button fx:id="loginBtn" defaultButton="true" layoutX="14.0" layoutY="16.0" mnemonicParsing="false" onAction="#handleLogin" text="进入系统" AnchorPane.topAnchor="5.0" />
-            <Button fx:id="resetBtn" layoutX="112.0" layoutY="16.0" mnemonicParsing="false" onAction="#handleReset" text="重置" AnchorPane.topAnchor="5.0" />
+            <Button fx:id="loginBtn" defaultButton="true" layoutX="93.0" layoutY="5.0" mnemonicParsing="false" onAction="#handleLogin" text="    进入系统    " AnchorPane.topAnchor="5.0" />
+            <Button fx:id="resetBtn" layoutX="233.0" layoutY="5.0" mnemonicParsing="false" onAction="#handleReset" text="    重置    " AnchorPane.topAnchor="5.0" />
          </children>
       </AnchorPane>
       <Label fx:id="errorLabel" textFill="#ee0000" GridPane.columnIndex="1" GridPane.rowIndex="3" />
