--- a/src/com/eqsys/view/NodeEditLayout.fxml
+++ b/src/com/eqsys/view/NodeEditLayout.fxml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.eqsys.view.NodeEditController">
+<GridPane id="edit_background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@mainpanetheme.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.eqsys.view.NodeEditController">
   <columnConstraints>
     <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -15,6 +19,7 @@
   </columnConstraints>
   <rowConstraints>
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -23,24 +28,29 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label text="台站代码:" GridPane.rowIndex="1" />
-      <Label text="经度:" GridPane.rowIndex="2" />
-      <Label text="纬度:" GridPane.rowIndex="3" />
-      <Label text="高程:" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-      <Label text="灵敏度:" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-      <Label text="触发阈值:" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="30.0" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="5">
+      <Label text="台站代码:" GridPane.rowIndex="2" />
+      <Label text="经度:" GridPane.rowIndex="3" />
+      <Label text="纬度:" GridPane.rowIndex="4" />
+      <Label text="高程:" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+      <Label text="灵敏度:" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+      <Label text="触发阈值:" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="30.0" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="6">
          <children>
-            <Button mnemonicParsing="false" onAction="#handleOk" text="确定" />
-            <Button mnemonicParsing="false" onAction="#handleCancel" text="取消" />
+            <Button mnemonicParsing="false" onAction="#handleOk" text="    确定    " />
+            <Button mnemonicParsing="false" onAction="#handleCancel" text="    取消    " />
          </children>
       </HBox>
-      <TextField fx:id="stationIdTf" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-      <TextField fx:id="longitudeTf" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      <TextField fx:id="latitudeTf" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-      <TextField fx:id="altitudeTf" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-      <TextField fx:id="sensitivityTf" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-      <TextField fx:id="triggerThresholdTf" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-      <Label fx:id="errorLab" text="" textFill="#ff0606" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="4" />
+      <TextField fx:id="stationIdTf" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <TextField fx:id="longitudeTf" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      <TextField fx:id="latitudeTf" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+      <TextField fx:id="altitudeTf" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+      <TextField fx:id="sensitivityTf" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+      <TextField fx:id="triggerThresholdTf" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+      <Label fx:id="errorLab" text="" textFill="#ff0606" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="5" />
+      <AnchorPane id="main_background1" prefHeight="45.0" prefWidth="600.0" GridPane.columnSpan="5">
+         <children>
+            <Label layoutX="248.0" layoutY="14.0" styleClass="label-header" text="台站信息编辑" />
+         </children>
+      </AnchorPane>
    </children>
 </GridPane>
