--- a/src/com/eqsys/view/ClientDetailLayout.fxml
+++ b/src/com/eqsys/view/ClientDetailLayout.fxml
@@ -35,7 +35,7 @@
                         <Label text="高程" GridPane.columnIndex="5" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                         <Label text="灵敏度" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                         <Label text="触发阈值" GridPane.columnIndex="7" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                        <Label text="权限" GridPane.columnIndex="8" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                        <Label text="控制权限" GridPane.columnIndex="8" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                         <Label fx:id="stationIdLab" text="Label" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
                         <Label fx:id="permitLab" text="Label" GridPane.columnIndex="8" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
                         <Label fx:id="longtitudeLab" text="Label" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
@@ -44,48 +44,53 @@
                         <Label fx:id="sensitivityLab" text="Label" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
                         <Label fx:id="transModeLab" text="Label" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
                         <Label fx:id="thresholdLab" text="Label" GridPane.columnIndex="7" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                        <AnchorPane id="main_background1" prefHeight="200.0" prefWidth="200.0" GridPane.rowSpan="2">
+                        <AnchorPane id="main_background1" prefHeight="200.0" prefWidth="200.0" styleClass="bar_background" GridPane.rowSpan="2">
                            <children>
-                              <Label id="main_" layoutX="10.0" layoutY="33.0" styleClass="label-header" text="台站信息">
+                              <Label id="main_" layoutX="6.0" layoutY="28.0" styleClass="label-header" text="台站信息">
                                  <font>
                                     <Font size="20.0" />
                                  </font>
                               </Label>
                            </children>
                         </AnchorPane>
-                        <AnchorPane id="main_background1" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="4" GridPane.rowSpan="2">
+                        <AnchorPane id="main_background1" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4" GridPane.rowSpan="2">
                            <children>
-                              <Label layoutX="52.0" layoutY="33.0" styleClass="label-header" text="模式控制" />
+                              <Label layoutX="7.0" layoutY="33.0" styleClass="label-header" text="模式控制" />
                            </children>
                         </AnchorPane>
-                        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="8" GridPane.rowIndex="4" GridPane.rowSpan="2">
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="bar_background" GridPane.columnIndex="1" GridPane.columnSpan="8" GridPane.rowIndex="4" GridPane.rowSpan="2">
                            <children>
                               <RadioButton fx:id="consRb" layoutX="122.0" layoutY="66.0" mnemonicParsing="false" text="连续波形传输" />
                               <RadioButton fx:id="triWRb" layoutX="122.0" layoutY="42.0" mnemonicParsing="false" text="触发传波形" />
                               <RadioButton fx:id="triWNRb" layoutX="122.0" layoutY="16.0" mnemonicParsing="false" text="触发不传波形" />
-                              <Button layoutX="320.0" layoutY="44.0" mnemonicParsing="false" onAction="#handleTransMode" text="确定" />
+                              <Button layoutX="320.0" layoutY="44.0" mnemonicParsing="false" onAction="#handleTranMode" text="确定" />
                            </children>
                         </AnchorPane>
-                        <AnchorPane id="main_background2" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="9" GridPane.rowIndex="3">
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="title" GridPane.columnSpan="9" GridPane.rowIndex="3">
                            <children>
                               <Label layoutX="360.0" layoutY="9.0" prefHeight="30.0" prefWidth="86.0" styleClass="label-header" text="台站控制" />
+                              <Label fx:id="errorLabel" layoutX="464.0" layoutY="21.0" text="Label" textFill="#f80000" />
                            </children>
                         </AnchorPane>
-                        <AnchorPane id="main_background1" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="8" GridPane.rowIndex="6" GridPane.rowSpan="2">
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="title_background" GridPane.rowIndex="6" GridPane.rowSpan="2">
                            <children>
                               <Label layoutX="8.0" layoutY="35.0" styleClass="label-header" text="阈值设定" />
                            </children>
                         </AnchorPane>
-                        <AnchorPane id="main_background1" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="8" GridPane.rowSpan="2">
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="title_background" GridPane.rowIndex="10" GridPane.rowSpan="2">
                            <children>
-                              <Label layoutX="19.0" layoutY="34.0" styleClass="label-header" text="申请时间段数据" />
+                              <Label layoutX="5.0" layoutY="34.0" styleClass="label-header" text="申请数据" />
                            </children>
                         </AnchorPane>
-                        <AnchorPane id="main_background1" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="8" GridPane.rowIndex="10" GridPane.rowSpan="2">
+                        <AnchorPane id="main_background1" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="8" GridPane.rowSpan="2">
                            <children>
                               <Label layoutX="7.0" layoutY="34.0" styleClass="label-header" text="触发控制" />
                            </children>
                         </AnchorPane>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" />
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="bar_background" GridPane.columnIndex="1" GridPane.columnSpan="8" GridPane.rowSpan="2" />
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="bar_background" GridPane.columnIndex="1" GridPane.columnSpan="8" GridPane.rowIndex="6" GridPane.rowSpan="2" />
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="bar_background" GridPane.columnIndex="1" GridPane.columnSpan="8" GridPane.rowIndex="8" GridPane.rowSpan="2" />
                      </children>
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -102,7 +107,7 @@
                         <RowConstraints maxHeight="40.0" minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="50.0" minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="50.0" minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="50.0" minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="50.0" minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="50.0" minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="50.0" minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
