--- a/src/com/eqsys/view/MainPaneLayout.fxml
+++ b/src/com/eqsys/view/MainPaneLayout.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -99,22 +100,48 @@
                      <children>
                         <AnchorPane id="main_background1_2" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                            <children>
-                              <Label layoutX="32.0" layoutY="42.0" text="台网名称：" />
-                              <Label layoutX="32.0" layoutY="67.0" text="IP：" />
-                              <Label fx:id="serverId" layoutX="119.0" layoutY="42.0" text="Label" />
-                              <Label fx:id="serverIp" layoutX="119.0" layoutY="67.0" text="Label" />
-                              <Label layoutX="32.0" layoutY="89.0" text="在线台站数量：" />
-                              <Label fx:id="onLineLabel" layoutX="119.0" layoutY="89.0" text="Label" />
+                              <GridPane layoutX="44.0" layoutY="37.0" prefHeight="104.0" prefWidth="217.0">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <Label text="台网名称：" />
+                                    <Label text="IP：" GridPane.rowIndex="1" />
+                                    <Label text="在线台站数量：" GridPane.rowIndex="2" />
+                                    <Label fx:id="serverId" text="Label" GridPane.columnIndex="1" />
+                                    <Label fx:id="serverIp" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                    <Label fx:id="onLineLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                 </children>
+                              </GridPane>
                            </children>
                         </AnchorPane>
                         <AnchorPane id="main_background2_2" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                            <children>
-                              <Label fx:id="dbName" layoutX="135.0" layoutY="42.0" text="Label" />
-                              <Label fx:id="dbType" layoutX="135.0" layoutY="65.0" text="Label" />
-                              <Label fx:id="dbState" layoutX="135.0" layoutY="93.0" text="Label" />
-                              <Label layoutX="56.0" layoutY="42.0" text="服务器名称：" />
-                              <Label layoutX="56.0" layoutY="65.0" text="数据库类型：" />
-                              <Label layoutX="56.0" layoutY="93.0" text="连接状态：" />
+                              <GridPane layoutX="39.0" layoutY="37.0" prefHeight="98.0" prefWidth="208.0">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <Label text="服务器名称：" />
+                                    <Label text="数据库类型：" GridPane.rowIndex="1" />
+                                    <Label text="连接状态：" GridPane.rowIndex="2" />
+                                    <Label fx:id="dbName" text="Label" GridPane.columnIndex="1" />
+                                    <Label fx:id="dbType" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                    <Label fx:id="dbState" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                 </children>
+                              </GridPane>
                            </children>
                         </AnchorPane>
                         <AnchorPane id="main_background1" prefHeight="200.0" prefWidth="200.0">
@@ -201,6 +228,13 @@
                               <TableColumn fx:id="sensitivity" prefWidth="65.0" text="灵敏度" visible="false" />
                               <TableColumn fx:id="triggerThreshold" prefWidth="100.0" text="触发阈值" />
                            </columns>
+                           <contextMenu>
+                              <ContextMenu>
+                                <items>
+                                  <MenuItem mnemonicParsing="false" onAction="#handleDetail" text="查看详情" />
+                                </items>
+                              </ContextMenu>
+                           </contextMenu>
                         </TableView>
                      </children>
                   </AnchorPane>
